--- a/backend/requirements.txt
+++ b/backend/requirements.txt
@@ -5,11 +5,23 @@ click==8.1.8
 fastapi==0.115.12
 h11==0.14.0
 idna==3.10
+joblib==1.4.2
+numpy==2.2.4
+packaging==24.2
+pandas==2.2.3
+patsy==1.0.1
 pydantic==2.11.3
 pydantic_core==2.33.1
+python-dateutil==2.9.0.post0
 python-dotenv==1.1.0
+pytz==2025.2
+scipy==1.15.2
+six==1.17.0
 sniffio==1.3.1
 starlette==0.46.1
+statsmodels==0.14.4
+threadpoolctl==3.6.0
 typing-inspection==0.4.0
 typing_extensions==4.13.2
+tzdata==2025.2
 uvicorn==0.34.0
